--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "usmfum-stats",
-  "homepage": "http://127.0.0.1/5500",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
