--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "^4.0.1",
